# django-docker-compose

./: .dockerignore  .gitignore  README.md  docker-compose.yml  run.sh
django/: .coveragerc  Dockerfile  environment.json  manage.py  pyproject.toml
django/apps_my_module/: __init__.py  admin.py  apps.py  urls.py
django/apps_my_module/auth/: __init__.py
django/apps_my_module/migrations/: 0001_initial.py  0002_author_entry.py  0002_blog.py  0003_author_entry.py  0003_auto_20230203_1418.py
django/apps_my_module/models/: __init__.py  blog.py  comments.py  entry.py  user.py
django/apps_my_module/msgs/: __init__.py
django/apps_my_module/serializers/: __init__.py  author_serializer.py  blog_serializer.py  custom_refresh_auth_token_serializer.py  entry_serializer.py  exceptions.py  user_serializer.py
django/apps_my_module/signals/: recurring_payment_created.py
django/apps_my_module/tasks/: __init__.py  scheduler.py  user_inactive.py
django/apps_my_module/tests/: base_test_case.py
django/apps_my_module/use_cases/: shortcuts.py
django/apps_my_module/views/: __init__.py  author_views.py  blog_views.py  custom_views.py  entry_views.py  user_views.py
django/config/: core_settings.py  urls.py  wsgi.py
django/config/settings/: base.py  ci.py  local.py  prod.py  qa.py
django/modules/apps_my_module/: __init__.py  app_settings.py  apps.py  urls.py
django/modules/core/: apps.py
django/modules/users/: __init__.py  admin.py  apps.py  urls.py
django/modules/utils/: string_utils.py
django/scripts/: cmdp  django-messages  django-migrate
django/users/: admin.py  apps.py  urls.py
django/users/auth/: __init__.py  (+2 more)
django/utils/: cryptography.py  date_utils.py  generic_views.py  parse_dict_to_object.py  viewsets.py
(+142 files in other folders)
