[tool.poetry]
description = "App Play"
license = "Apache-2.0"
name = "django-docker-compose"
version = "1.0.0"

authors = [
  "Saúl Galán <saengate@gmail.com>",
]

readme = 'README.md' # Markdown files are supported

homepage = "https://github.com/saengate/django-docker-compose"
repository = "https://github.com/saengate/django-docker-compose"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/
Django = "^3.2"
coverage = "^5.5"
django-bulk-update-or-create = "^0.3.0"
django-cors-headers = "^3.5"
django-extensions = "^3.0"
django-filter = "^2.4.0"
django-redis = "^5.2.0"
django-rest-passwordreset = "1.1.0"
django-rq = "^2.5.1"
django-storages = "^1.12.3"
django-url-filter = "^0.3.15"
django-watchman = "^0.18"
djangorestframework = "^3.10"
djangotoolbox = "^1.8"
drf-jwt = "1.17.2"
pandas = "~1.3.5"
psycopg2 = "^2.8"
python = "3.7.3"
python-dateutil = "^2.8"
redis = "^3.2"
requests = "^2.22"
rq = "^1.5"
rq-scheduler = "0.11.0"
termcolor = "^1.1"
unidecode = "^1.3.2"
urllib3 = "^1.25"
hiredis = "^2.2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
awscli-local = "^0.20"
drf-yasg = "^1.20"
flake8 = "^3.8"
flake8-commas = "^2.0"
flake8-quotes = "^3.2.0"
freezegun = "^1.2.2"
ipykernel = "^5.3"
ipython = "^7.17"
ipywidgets = "^7.5"
isort = "^5.6"
jedi = "^0.17"
jupyter = "^1.0"
jupyter-client = "^6.1"
jupyter-console = "^6.1"
jupyter-core = "^4.6"
mock = "^4.0"
nbconvert = "^6.0"
nbformat = "^5.0"
notebook = "^6.1"
py-lancer = "^1.0.0"
pycodestyle = "^2.7.0"
qtconsole = "^4.7"
rope = "^0.18.0"
tblib = "^1.7.0"
widgetsnbextension = "^3.5"
